# Cmake1

./: .gitignore
CMakeProject1/: CMakeLists.txt  Task3.cpp  equilateralTriangle.cpp  equilateralTriangle.h  figure.cpp  figure.h  isoscelesTriangle.h  parallelogram.cpp  parallelogram.h  quadrilateral.cpp  rectangle.cpp  rectangle.h  rhombus.h  rightTriangle.cpp  rightTriangle.h  square.cpp  square.h  triangle.h
my_first_cmake_project/: CMakeLists.txt  CMakeProject1.h  my_first_cmake_program.cpp
